--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-paper-dates",
+  "name": "@aslanab/react-native-paper-dates",
   "version": "0.21.7",
   "description": "Performant Date Picker for React Native Paper",
   "main": "lib/commonjs/index",
