--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@aslanab/react-native-paper-dates",
-  "version": "0.21.7",
-  "description": "Performant Date Picker for React Native Paper",
+  "version": "0.21.8",
+  "description": "Forked library: Performant Date Picker for React Native Paper",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
@@ -39,16 +39,13 @@
     "ios",
     "android"
   ],
-  "repository": "https://github.com/web-ridge/react-native-paper-dates",
-  "author": "Richard Lindhout <info@webridge.nl> (https://github.com/web-ridge)",
+  "repository": "https://github.com/AslanAb/react-native-paper-dates.git",
+  "author": "Forked library from: Richard Lindhout <info@webridge.nl> (https://github.com/web-ridge)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/web-ridge/react-native-paper-dates/issues"
+    "url": "https://github.com/AslanAb/react-native-paper-dates.git"
   },
-  "homepage": "https://github.com/web-ridge/react-native-paper-dates#readme",
-  "publishConfig": {
-    "registry": "https://registry.npmjs.org/"
-  },
+  "homepage": "https://github.com/AslanAb/react-native-paper-dates.git",
   "devDependencies": {
     "@commitlint/config-conventional": "^17.8.1",
     "@react-native-community/eslint-config": "^3.2.0",
@@ -86,34 +83,6 @@
     "react-native": "*",
     "react-native-paper": "*",
     "react-native-vector-icons": "*"
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-commit": "yarn lint && yarn typecheck"
-    }
-  },
-  "commitlint": {
-    "extends": [
-      "@commitlint/config-conventional"
-    ]
-  },
-  "release-it": {
-    "git": {
-      "commitMessage": "chore: release ${version}",
-      "tagName": "v${version}"
-    },
-    "npm": {
-      "publish": true
-    },
-    "github": {
-      "release": true
-    },
-    "plugins": {
-      "@release-it/conventional-changelog": {
-        "preset": "angular"
-      }
-    }
   },
   "eslintConfig": {
     "root": true,
@@ -166,6 +135,7 @@
     ]
   },
   "dependencies": {
-    "color": "^3.2.1"
+    "color": "^3.2.1",
+    "expo-blur": "~12.4.1"
   }
 }
